--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,18 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Copy files to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "."
-          target: ${{ secrets.DEPLOY_PATH }}
-
       - name: Run deployment commands on EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -30,7 +18,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd ${{ secrets.DEPLOY_PATH }}
+            cd /var/www/renew
 
             echo "📦 Pulling latest code..."
             git fetch origin main
@@ -48,15 +36,14 @@ jobs:
             echo "🏗️ Building frontend assets..."
             npm run build
 
-            echo "🧾 Setting correct permissions..."
+            echo "🧾 Setting permissions..."
             sudo chown -R ubuntu:www-data storage bootstrap/cache
             sudo chmod -R 775 storage bootstrap/cache
 
             echo "🛠️ Running migrations..."
             php artisan migrate --force
 
-            echo "🚀 Restarting services..."
-            sudo systemctl restart nginx || true
-            sudo systemctl restart php8.2-fpm || true
+            echo "🚀 Restarting Apache..."
+            sudo systemctl restart apache2
 
             echo "✅ Deployment completed successfully!"
